# mate-mplayer

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  apps.gecko-mediaplayer.preferences.gschema.xml  apps.mate-mplayer.preferences.gschema.xml  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.in  mate-mplayer.1  mate-mplayer.desktop  mate-mplayer.schemas.in  mate-mplayer.spec.in  mate-mplayer.xml  mkinstalldirs  org.mate.gecko-mediaplayer.preferences.gschema.xml  org.mate.mate-mplayer.preferences.gschema.xml
DOCS/tech/: dbus.txt  plugin-interaction.txt
icons/: Makefile.in
icons/16x16/: Makefile.am  Makefile.in
icons/22x22/: Makefile.am  Makefile.in
icons/24x24/: Makefile.am  Makefile.in
icons/32x32/: Makefile.am  Makefile.in
icons/48x48/: Makefile.am  Makefile.in
icons/scalable/: Makefile.am  Makefile.in
pixmaps/: mate_mplayer.xpm
po/: POTFILES.in  ar.gmo  ar.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fo.gmo  fo.po  fr.gmo  fr.po  fy.gmo  fy.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  (+48 more)
src/: Makefile.am  Makefile.in  caja_property_page.c  common.h  database.c  dbus-interface.c  gui.c  gui.h  main.c  mpris-interface.c  nemo_property_page.c  playlist.c  property_page_common.c  property_page_common.h  support.c
